# retrodream

./: .cache  .gitignore  .gitmodules  CMakeLists.txt  README.md  SCRAP.TXT  TODO.TXT
data/art/: buttons.xcf  splash.xcf
data/common/datadir/DS/apps/bios_flasher/: app.xml
data/common/datadir/DS/apps/filemanager/: app.xml
data/common/datadir/DS/apps/filemanager/lua/: main.lua
data/common/datadir/DS/apps/gd_ripper/: app.xml
data/common/datadir/DS/apps/gdplay/: app.xml
data/common/datadir/DS/apps/iso_loader/: app.xml
data/common/datadir/DS/apps/iso_loader/images/: Thumbs.db
data/common/datadir/DS/apps/iso_loader/presets/: ide_0035a71743b5d7cb2e8b8bb07bdd52c6.cfg  ide_0041ffbf2c388f6b9788931ccc528d31.cfg  ide_00fbdb4d26a4992e976d927bd38af447.cfg  ide_0144eff2c9aa26a9ee1710ac9d9e3014.cfg  ide_015cc7c3403ec6a3820211a9b0654840.cfg  ide_0199e8c7c0a77bc74784f0f21fdd847c.cfg  ide_029aac38f5c575f45818f9cf21b4535c.cfg  ide_034bceae02784d02125f3022a18ef622.cfg  ide_035ac5e15b1d57cca1e673f47d0d1e67.cfg  ide_03e0a1e5af73b95710da662164b3077e.cfg  ide_04168e8719c3dd0117aaef8e38d49b5b.cfg  ide_0425bdc489133b3c31028b9b1bf20e3a.cfg  ide_042e7b47490a225c68106e66b1ce2570.cfg  ide_04586859bdb0cdd0defbfd5a6fa49a8a.cfg  ide_0459b79f29ba0b1472a8bd28390e0f24.cfg  ide_04d572ecbed3cec318ee37b19a697d15.cfg  ide_055c9308cebee8df4d80850ad21d676c.cfg  ide_0628a9d7719a892f495162999c1e1620.cfg  ide_067d5b939685a0b11fc5263f7f8b5dad.cfg  ide_072a5eae4dbed506659ecf60f9b71b64.cfg  ide_072ce813fceb1476b56b2c3829686c30.cfg  ide_0763c22add2fa802f3ba6a81465ed42b.cfg  ide_08999a8e8f88c77bd9233417b6640b01.cfg  ide_0b7a499a96720767cba1b00691ce6457.cfg  ide_0bfb6c16951b56bc873d97a2d02cd354.cfg  ide_0c4334a7dbf9457f14c22b54d5615b23.cfg  ide_0c65b2627aeb8497475b1a89d89df386.cfg  ide_0e19a296781f81ee48ccbbd3f150bf93.cfg  ide_0f5a678375e83b16c85594ecf2ffeee1.cfg  ide_0fd1cf357a79ecff5696e7f2fca1b10d.cfg  ide_1108a55d4bd70279e11804c32fd583d5.cfg  ide_113421fdd37891d25f191b4d44405f32.cfg  ide_11514b7d8702ff1768e593b4c369c3ec.cfg  ide_11ed846a46a7582a3224fa3e0f6639f4.cfg  ide_124102156b9a32054e4cbd21ccc8f5e0.cfg  ide_12b3a3584a7a92b736c9bf4f4ac46283.cfg  ide_12d415626c79bf95aaf7fc45ee79509b.cfg  ide_12ffdd183e1ff0380b1e2c9cf4c3d419.cfg  ide_13808564560364ad09d02e6d9c40e115.cfg  ide_13a30e4f77cecf3f0545d91eb1e0ebd9.cfg  (+477 more)
data/common/datadir/DS/apps/iso_loader/videos/: Another World.roq
data/common/datadir/DS/apps/main/: app.xml
data/common/datadir/DS/apps/main/scripts/: console.dsc  dcloadip.dsc
data/common/datadir/DS/apps/region_changer/: app.xml
data/common/datadir/DS/apps/region_changer/doc/: Manual.txt
data/common/datadir/DS/apps/region_changer/lua/: main.lua
data/common/datadir/DS/apps/settings/: app.xml
data/common/datadir/DS/apps/speedtest/: app.xml
data/common/datadir/DS/apps/vmu_manager/: app.xml
data/common/datadir/DS/apps/vmu_manager/modules/: app_vmu_manager.klf
data/common/datadir/DS/cmds/: bfm  calc  luac
data/common/datadir/DS/doc/: about.txt  changelog.txt  ffmpeg.txt
data/common/datadir/DS/firmware/: Thumbs.db
data/common/datadir/DS/firmware/isoldr/: Beta.txt
data/common/datadir/DS/lua/: shutdown.lua  startup.lua
data/common/datadir/DS/lua/lib/: class.lua
data/common/datadir/DS/lua/lib/bit/: hex.lua  readme.txt  utf8.lua
data/common/datadir/DS/modules/: isoldr.klf
data/common/datadir/GAMES/Marvel vs Capcom 2 - New Age of Heroes/: Marvel vs Capcom 2 - New Age of Heroes.gdi
data/common/datadir/RD/bios/: dreamboot-1.1.0.bios  dreamboot-nogdrom.bios
data/common/datadir/RD/roms/VA0_PAL/: block1.rom  system.rom
data/common/datadir/RD/roms/VA1_PAL/: block1.rom  system.rom
data/common/romfs/: block1.rom  system.rom
data/common/romfs/skin/: future.fnt
data/linux/romfs/: test.roq  test2.roq
data/res/: future.bmfc  splash.xcf
reicast/: dcload-103-serial-dj3.cdi  reicast-debug-serial.sh
src/: biosflash.h  cfg.cpp  cfg.h  colors.h  credits.cpp  credits.h  filemenu.cpp  filemenu.h  filer.cpp  filer.h  flashrom.cpp  flashrom.h  gdplay.cpp  gdplay.h  header.cpp  header.h  helpbox.cpp  helpbox.h  infobox.cpp  infobox.h  isoldr.cpp  isoldr.h  isoloader.c  isoloader.cpp  isoloader.h  main.cpp  main.h  menu.cpp  menu.h  optionmenu.cpp  optionmenu.h  presetmenu.cpp  presetmenu.h  preview.cpp  preview.h  previewvideo.cpp  previewvideo.h  progressbox.cpp  progressbox.h  regionfreemenu.cpp  (+25 more)
src/ds/include/: ds.h
src/ds/src/irq/: exceptions.c
src/ds/src/utils/: debug_console.c
src/ds_wrapper/: build_exports.sh  ds_wrapper.c  exports.txt  isofs_module.c
src/ds_wrapper/zlib/: zlib.h
src/flash/: biosflash.cpp  block1partition.cpp  block1partition.h  partition.cpp  partition.h  romflash.cpp  romflash.h  systempartition.cpp  systempartition.h
